--- a/index.html
+++ b/index.html
@@ -15,127 +15,144 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css">
 </head>
-<body class="container-fluid">
-    <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">Johnathan Specter</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M24 4H0V0H24V4ZM24 8H0V12H24V8ZM24 16H0V20H24V16Z" fill="white"/>
-                </svg>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Articles</a>
-                    </li>
+<body class="bg-black">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">Johnathan Specter</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                    <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24 4H0V0H24V4ZM24 8H0V12H24V8ZM24 16H0V20H24V16Z" fill="white"/>
+                    </svg>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Articles</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Chats</a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Chats</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Awards</a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Awards</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
-                    </li>
-                </ul>
-                <button class="btn">Get In Touch</button>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                    </ul>
+                    <button class="btn">Get In Touch</button>
+                </div>
+        
+        </nav>
+    </div>
+
+                           <!------------------- MAIN ---------------------->
+    <main class="container-fluid">
+        <section>
+            <div class="row my-5">
+                <div class="col-lg-7">
+                    <h1 class="main-head display-5">Helping Companies build better, scalable software.</h1>
+                    <p>Award-winning web developer and author, with over 15+ years of working experience with Fortune 500 companies like Apple, Google, Facebook, and more.</p>
+                </div>
+                <div class="col-lg-5"></div>
             </div>
+        </section>
 
-    </nav>
+        <section class="layer">
+            <div class="row my-5">
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/JP Morgan.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/Samsung.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/Tinder.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/Verizon.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/Visa.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-4 col-lg d-flex justify-content-center my-2">
+                    <img src="../Developer Portfolio Starter Files/Assets/Logos/Walmart.svg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </section>
+    </main>
+<!---------------------------------END OF MAIN----------------------------->
 
-    <section>
+<!------------------------------SECOND SECTION------------------------------>
+    <section class="container-fluid">
         <div class="row">
-            <div class="col-md-7">
-                <h1 class="main-head">Helping Companies build better, scalable software.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum illo totam fuga aut numquam asperiores? Animi fugiat, adipisci officiis repellendus temporibus nostrum quod aut eius dolorum saepe iure illum necessitatibus!</p>
-            </div>
-            <div class="col-md-5"></div>
-        </div>
-    </section>
-
-    <section class="layer">
-        <div class="row">
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/JP Morgan.svg" alt="" class="img-fluid logos">
-            </div>
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/Samsung.svg" alt="" class="img-fluid logos">
-            </div>
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/Tinder.svg" alt="" class="img-fluid logos">
-            </div>
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/Verizon.svg" alt="" class="img-fluid logos">
-            </div>
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/Visa.svg" alt="" class="img-fluid logos">
-            </div>
-            <div class="col-6 col-md-4 col-lg">
-                <img src="../Developer Portfolio Starter Files/Assets/Logos/Walmart.svg" alt="" class="img-fluid logos">
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md">
                 <img src="../Developer Portfolio Starter Files/Assets/Spense.png" alt="" class="img-fluid image-line">
-                <h2>Spense.com<span class="material-symbols-outlined">trending_flat</span></h2>
-                <p class="padd">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, sint aliquid eaque natus pariatur ratione beatae dignissimos, inventore minima incidunt, itaque fugit eos excepturi soluta rerum praesentium. Explicabo, voluptate ad!</p>
+                <h2 class="mt-4">Spense.com<span class="material-symbols-outlined">trending_flat</span></h2>
+                <p class="padd">Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing, and less on when and <i>how</i> they'll get paid. Project in collaboration with Codewell.cc</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md">
                 <img src="../Developer Portfolio Starter Files/Assets/YelpCamp.png" alt="" class="img-fluid image-line">
-                <h2>YelpCamp.com<span class="material-symbols-outlined">trending_flat</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis minus blanditiis laborum unde id similique expedita soluta, veritatis magni placeat nostrum, reprehenderit natus iusto at, libero consequuntur cum eveniet inventore?</p>
+                <h2 class="mt-4">YelpCamp.com<span class="material-symbols-outlined">trending_flat</span></h2>
+                <p>Allowing backpack travelers to perfectly plan their trip through an open-source platform similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favourite in 2021.  </p>
             </div>
         </div>
     </section>
+    <!----------------------------END OF SECOND SECTION-------------------->
 
-    <section class="greyBg">
-        <div class="row">
-            <div class="col-lg-6">
+
+    <!----------------------------THIRD SECTION----------------------------->
+    <section class="container-fluid greyBg">
+        <div class="row py-5">
+            <div class="col-lg-6 col-md">
                 <h2>A co-founder at one of the world's largest communities.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel tempore, eligendi voluptates molestias quae aperiam nam minus expedita quasi soluta accusantium quas voluptas. Recusandae odit magni at ea aspernatur?
-                Nulla architecto laboriosam voluptatibus accusamus natus illo similique, beatae vero veniam explicabo impedit mollitia. Obcaecati sunt ad magnam ut minus unde cumque provident quae recusandae debitis voluptate, praesentium, minima libero.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam maiores sequi natus totam sint nostrum, quod, vero id minus officia quibusdam nisi nulla minima! Eveniet mollitia quibusdam suscipit voluptatem culpa.</p>
+                <p>The combined experience i have working at the top Fortune 500 companies has allowed me to develop a skillset that helps me in not just development, but in every aspect of any business.</p>
+                <p>I'm proud to announce that i'm now working at one of the world's largest communities teaching young minds about how to <i>sell</i> yourself as a developer and open them to a whole new world of opportunities.</p>
             </div>
-            <div class="col-lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quo quasi ipsam doloremque! Voluptas voluptatem ducimus, facilis deleniti ad nobis repellat quae porro doloribus illo debitis, repellendus nihil accusamus dolorum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat rerum quis quaerat. Hic eos eaque, inventore officiis perferendis accusantium saepe velit, nesciunt earum pariatur, asperiores ad! Quaerat dolorum corrupti harum!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat praesentium rerum, est exercitationem adipisci, dolores accusantium cupiditate voluptas aliquid nulla magnam hic. Expedita hic quia impedit. Nesciunt commodi fuga rem.
-                Facilis pariatur numquam in nobis quidem quasi illum nam laboriosam, laborum maxime! Fugit ducimus qui optio vero minima enim, atque in. Eveniet delectus modi ipsum reprehenderit, velit tempora autem earum.</p>
+            <div class="col-lg-6 col-md">
+                <p>As a developer, you have everything available to you and all that's holding you back is yourself.</p>
+                <p>A quote i live by perfectly illustrates what i mean.</p>
+                <p>"How big would you dream, if you <em>knew</em> you would"nt fail?"<br>
+                You've already gone through the hardest parts being a developer, it's time to elevate your skills and become a leader in something you're <i>passionate</i> about.</p>
+                <p>I'm happy to chat over coffee sometime about how i can help your company.</p>
             </div>
         </div>
     </section>
+    <!---------------------END OF THIRD SECTION----------------------->
 
-    <section>
-        <div class="row">
-            <div class="col-lg-6">
+
+    <!-------------------------FOURTH SECTION------------------------->
+    <section class="container-fluid">
+        <div class="row py-5">
+            <div class="col-lg-6 col-md">
                 <h2>Interested in working with me?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel tempore, eligendi voluptates molestias quae aperiam nam minus expedita quasi soluta accusantium quas voluptas. Recusandae odit magni at ea aspernatur?
-                Nulla architecto laboriosam voluptatibus accusamus natus illo similique, beatae vero veniam explicabo impedit mollitia. Obcaecati sunt ad magnam ut minus unde cumque provident quae recusandae debitis voluptate, praesentium, minima libero.</p>
+                <p>I'm active on all social media platforms listed below, but you can also send me an email and i'll get back to you within 24-48 hours.</p>
                 <button class="btn">Get In Touch</button>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md">
             </div>
         </div>
     </section>
+    <!-------------END OF FOURTH SECTION--------------------->
 
-    <footer class="greyBg">
-        <nav class="d-flex justify-content-between">
+
+    <!------------------------------FOOTER---------------------------->
+    <footer class="container-fluid greyBg">
+        <nav class="navbar d-flex justify-content-between">
         <a class="navbar-brand" href="#">Johnathan Specter</a>
         <div class="mini-logo">
-            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/Github.svg" alt="" class="img-fluid logo_sm"></a>
-            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/LinkedIn.svg" alt="" class="img-fluid logo_sm"></a>
-            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/Twitter.svg" alt="" class="img-fluid logo_sm"></a>
+            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/Github.svg" alt="" class="img-fluid px-2" width="33rem"></a>
+            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/LinkedIn.svg" alt="" class="img-fluid px-2" width="33rem"></a>
+            <a href=""><img src="../Developer Portfolio Starter Files/Assets/Social Icons/Twitter.svg" alt="" class="img-fluid px-2" width="33rem"></a>
         </div>
         </nav>
-
     </footer>
+    <!-------------------END OF FOOTER------------------------->
 
+    <!------------------SOLOMON BASSEY----------------->
+    <!----------------solomonbassey@gmail.com------------>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
