--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="app.css">
-    <title>/Developer Portfolio Starter Files</title>
+    <title>Developer Portfolio Starter Files</title>
 </head>
 <body>
     <main>
@@ -20,17 +20,24 @@
             <nav>
                 <a href="">Johnathan Specter</a>
                 <div class="hamburger-links">
-                    <img src="./Assets/Hamburger Menu.svg" alt="">
+                    <button class="mobile-toggle" aria-controls="navLinks" aria-expanded="false"></button>
+                    <ul class="nav-links" id="navLinks" data-visible="false">
+                        <li><a href="" class="link__nav">Articles</a></li>
+                        <li><a href="" class="link__nav">Chats</a></li>
+                        <li><a href="" class="link__nav">Awards</a></li>
+                        <li><a href="" class="link__nav">About</a></li>
+                    </ul>
                 </div>
+                <button class="btn btn-nav" id="navBtn">Get in Touch</button>
             </nav>
         </header>
 
-        <div class="hero">
+        <div class="hero hidden">
             <h1>Helping Companies build better, scalable software.</h1>
             <p>Award-winning web developer and author, with over 15+ years of working experience with Fortune 500 companies like Apple, Google, Facebook, and more.</p>
         </div>
 
-        <div class="brand-logo">
+        <div class="brand-logo hidden">
             <ul class="logos">
                 <li><img src="./Assets/Logos/JP Morgan.svg" alt="" class="asset-logo"></li>
                 <li><img src="./Assets/Logos/Samsung.svg" alt="" class="asset-logo"></li>
@@ -42,7 +49,7 @@
             
         </div>
 
-        <div class="get-access">
+        <div class="get-access hidden">
             <div class="get-link">
                 <img src="./Assets/Spense.png" alt="" class="get-access-img">
                 <h2>Spense.com<span class="material-symbols-outlined">trending_flat</span></h2>
@@ -57,7 +64,7 @@
     </main>
     
     <article>
-        <div class="article-container">
+        <div class="article-container hidden">
             <div class="article-section-1">
                 <h2>A co-founder at one of the world's largest communities.</h2>
                 <p class="p-1">The combined experience i have working at the top Fortune 500 companies has allowed me to develop a skillset that helps me in not just development, but in every aspect of any business.</p>
@@ -75,7 +82,7 @@
     </article>
 
     <section>
-        <div class="call-to-action">
+        <div class="call-to-action hidden">
             <h2>Interested in working with me?</h2>
             <p>I'm active on all social media platforms listed below, but you can also send me an email and i'll get back to you within 24-48 hours.</p>
             <button class="btn">Get In Touch</button>
@@ -83,7 +90,7 @@
     </section>
 
     <footer>
-        <div class="navbar">
+        <div class="navbar hidden">
             <a href="">Johnathan Specter</a>
             <div class="social-links">
                 <a href=""><img src="./Assets/Social Icons/Github.svg" alt="" class="icons"></a>
@@ -92,5 +99,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./app.js"></script>
 </body>
 </html>
